k8s/apps/nextcloud/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:33.0.7-apache
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nextcloud-apps
              mountPath: /var/www/html/custom_apps
            - name: nextcloud-config
              mountPath: /var/www/html/config
            - name: nextcloud-data
              mountPath: /var/www/html/data
            - name: nextcloud-theme
              mountPath: /var/www/html/themes/litarvan
          resources:
            requests:
              cpu: 300m
              memory: 1Gi
            limits:
              memory: 1Gi
      volumes:
        - name: nextcloud-apps
          persistentVolumeClaim:
            claimName: nextcloud-apps
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
        - name: nextcloud-theme
          persistentVolumeClaim:
            claimName: nextcloud-theme
