k8s/apps/nextcloud/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - name: http
      port: 80
      targetPort: 80
