k8s/apps/nextcloud/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`files.litarvan.com`)
      middlewares:
        - name: nextcloud-well-known
      services:
        - name: nextcloud
          port: http
