k8s/apps/nextcloud/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: files.litarvan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: http
  tls:
    - hosts:
        - files.litarvan.dev
      secretName: files-tls
